# lab1

./: CMakeLists.txt  TritSet.cpp  header.h  main.cpp  test.cpp
